<resources>
    <string name="app_name">Animation</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="navigation_bar_slider">Navigation Bar Slider</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="seenu">SeeNu</string>
    <string name="seenivasan_t_zohocorp_com">seenivasan.t@zohocorp.com</string>
    <string name="user_image">User image</string>
    <string name="icon">Icon</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>

    <string name="findFriends">Find Friends</string>
    <string name="feed">Friends Feed</string>
    <string name="activity">Activity</string>
    <string name="settings">Settings</string>
    <string name="explore">Explore</string>

</resources>
