<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DrawerActivity"
    tools:openDrawer="start">


    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/toggler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_menu_bar" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/header_layout" />

            <com.learning.animation.customview.PairView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_feed"
                app:text="@string/feed" />

            <com.learning.animation.customview.PairView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_explore"
                app:text="@string/explore" />

            <com.learning.animation.customview.PairView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_activity"
                app:text="@string/activity" />

            <com.learning.animation.customview.PairView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_find_friends"
                app:text="@string/findFriends" />

            <com.learning.animation.customview.PairView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_settings"
                app:text="@string/settings" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>